# Watch-Server

./: .env.template  .gitignore  CMakeLists.txt  README.md  Watch-Server.service  Watch-Sync.service  run.sh
src/: main.py  server.py  sql.py
